@@ -15,6 +15,11 @@ script:
   folders:
     - /usr/local/share/n98-magerun/scripts
 
+init:
+  code: admin
+  type: store
+  options: []
+
 detect:
   subFolders:
     - web
