@@ -1,0 +1,8 @@
+<?php
+
+namespace N98MagerunTest;
+
+class AlternativeConfigModel extends \Mage_Core_Model_Config
+{
+
+}
