@@ -8,6 +8,7 @@ RECENT CHANGES
 
 * New command dev:translate:set
 * #149 Command for dumping media directory
+* #309 N98\Magento\Application::_initMagento1()
 * #310 Export inline translation to CSV (by Alexander Menk)
 * #316 db:import dump optimization (--optimize) - small fixes (by Alexander Menk)
 * #319 dev:module:rewrite:list does not list autoload rewrites in community folder
